[gd_scene load_steps=22 format=3 uid="uid://cw60n741n5xbh"]

[ext_resource type="Script" path="res://Scenes/Enemy.gd" id="1_uxdwq"]
[ext_resource type="Script" path="res://Scenes/HitManager.gd" id="2_mcu3c"]
[ext_resource type="PackedScene" uid="uid://dl2ifh2mtykpq" path="res://Particles/HitImpact.tscn" id="3_2bufq"]
[ext_resource type="Script" path="res://Enemy/Scripts/BossGUI.gd" id="4_anaig"]
[ext_resource type="Script" path="res://Scenes/DamageNumber.gd" id="5_jvy4g"]
[ext_resource type="Material" uid="uid://dwax5uwomrfi0" path="res://Shaders/HurtFlash.tres" id="6_6u113"]
[ext_resource type="Script" path="res://Scenes/FlashOnHit.gd" id="6_b0d2p"]
[ext_resource type="Theme" uid="uid://chfnev2av5hq" path="res://Enemy/BossAssets/healthbar_theme.tres" id="6_gtanp"]
[ext_resource type="Theme" uid="uid://ct21butfrkec1" path="res://UI/UI_theme.tres" id="6_unf27"]
[ext_resource type="Script" path="res://Enemy/Scripts/EnemySoundManager.gd" id="7_qn5me"]
[ext_resource type="Texture2D" uid="uid://1veonjc4ryh" path="res://Enemy/BossAssets/hp_bar_empty.png" id="8_mn5ye"]
[ext_resource type="Texture2D" uid="uid://h4betidm3s7t" path="res://Enemy/BossAssets/hp_bar_full.png" id="9_swrmq"]
[ext_resource type="Script" path="res://Enemy/BossScenes/HealthBar.gd" id="9_t5nqb"]
[ext_resource type="AudioStream" uid="uid://cuofke1qwq4pr" path="res://Sounds/boss hit.wav" id="14_xjo33"]
[ext_resource type="AudioStream" uid="uid://b61sairkeju05" path="res://Sounds/boss death.wav" id="15_ak7rf"]

[sub_resource type="LabelSettings" id="LabelSettings_lgit8"]
font_size = 36
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_4tlaq"]
resource_name = "HealthBarShake"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(10, 5), Vector2(-5, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xfqul"]
_data = {
"HealthBarShake": SubResource("Animation_4tlaq")
}

[sub_resource type="Animation" id="Animation_yh7k6"]
resource_name = "HealthBarFlash"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jocff"]
_data = {
"HealthBarFlash": SubResource("Animation_yh7k6")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_635ns"]
radius = 123.78
height = 332.54

[node name="Enemy2" type="Node2D" groups=["enemy"]]
visible = false
position = Vector2(0, 96)
scale = Vector2(3, 3)
script = ExtResource("1_uxdwq")
max_hp = 8

[node name="HitManager" type="Node2D" parent="."]
script = ExtResource("2_mcu3c")

[node name="ImpactEffect" parent="HitManager" instance=ExtResource("3_2bufq")]

[node name="EnemyGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 14.363
script = ExtResource("4_anaig")
health_bar = NodePath("CanvasLayer/Control/VBoxContainer/HealthBar")
health_percentage = NodePath("CanvasLayer/Control/VBoxContainer/HealthBar/HealthPercentage")
boss_name = NodePath("CanvasLayer/Control/VBoxContainer/HealthBar/BossName")
metadata/_edit_use_anchors_ = true

[node name="DamageNumber" type="Label" parent="EnemyGUI"]
modulate = Color(1, 1, 1, 0)
offset_top = -84.0
offset_right = 40.0
offset_bottom = -58.0
text = "0"
label_settings = SubResource("LabelSettings_lgit8")
script = ExtResource("5_jvy4g")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="EnemyGUI"]

[node name="Control" type="Control" parent="EnemyGUI/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyGUI/CanvasLayer/Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = 10.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="TextureProgressBar" parent="EnemyGUI/CanvasLayer/Control/VBoxContainer"]
material = ExtResource("6_6u113")
use_parent_material = true
offset_left = 274.0
offset_right = 878.0
offset_bottom = 60.0
size_flags_horizontal = 4
theme = ExtResource("6_gtanp")
value = 50.0
rounded = true
texture_under = ExtResource("8_mn5ye")
texture_progress = ExtResource("9_swrmq")
script = ExtResource("9_t5nqb")

[node name="HealthPercentage" type="Label" parent="EnemyGUI/CanvasLayer/Control/VBoxContainer/HealthBar"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -8.5
offset_right = 0.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_unf27")
horizontal_alignment = 1

[node name="BossName" type="Label" parent="EnemyGUI/CanvasLayer/Control/VBoxContainer/HealthBar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -12.5
offset_right = 576.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_unf27")
horizontal_alignment = 1
uppercase = true

[node name="HealthBarShake" type="AnimationPlayer" parent="EnemyGUI/CanvasLayer/Control/VBoxContainer/HealthBar"]
libraries = {
"": SubResource("AnimationLibrary_xfqul")
}

[node name="HealthBarFlash" type="AnimationPlayer" parent="EnemyGUI/CanvasLayer/Control/VBoxContainer/HealthBar"]
libraries = {
"": SubResource("AnimationLibrary_jocff")
}

[node name="Pain" type="Timer" parent="EnemyGUI"]
wait_time = 1.5

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-2, -40)
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_635ns")

[node name="FlashOnHit" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_b0d2p")
sprite = NodePath("")

[node name="Attacks" type="Node2D" parent="."]

[node name="EnemyAudioManager" type="Node2D" parent="."]
script = ExtResource("7_qn5me")

[node name="HitSound" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("14_xjo33")

[node name="HitSound2" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("14_xjo33")

[node name="HitSound3" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("14_xjo33")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("15_ak7rf")

[node name="DeathSound2" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("15_ak7rf")

[node name="DeathSound3" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("15_ak7rf")

[node name="DeathSound4" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("15_ak7rf")

[node name="DeathSound5" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("15_ak7rf")

[node name="DeathSound6" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("15_ak7rf")

[node name="DeathSound7" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("15_ak7rf")

[node name="DeathSound8" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("15_ak7rf")

[node name="DeathSound9" type="AudioStreamPlayer2D" parent="EnemyAudioManager"]
stream = ExtResource("15_ak7rf")

[connection signal="death" from="." to="EnemyAudioManager" method="_on_enemy_death"]
[connection signal="health_changed" from="." to="HitManager" method="_on_enemy_health_changed"]
[connection signal="health_changed" from="." to="EnemyGUI" method="_on_health_changed"]
[connection signal="health_changed" from="." to="EnemyGUI/CanvasLayer/Control/VBoxContainer/HealthBar" method="_on_enemy_2_health_changed"]
[connection signal="health_changed" from="." to="FlashOnHit" method="_on_health_changed"]
[connection signal="health_changed" from="." to="EnemyAudioManager" method="_on_enemy_health_changed"]
[connection signal="timeout" from="EnemyGUI/Pain" to="." method="_on_pain_timeout"]
